[package]
name = "genja"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5.1"
bevy = { version = "0.18.0", features = ["dynamic_linking", "free_camera"] }
# bevy_dev_tools = { version = "0.18.0", features = ["screenrecording"] }
bevy_polyline = { git = "https://github.com/m-edlund/bevy_polyline.git", rev = "c315c996e925e65b44f945975ba7baaf5d2a6432" }
cpal = "0.15"
ringbuf = "0.4.8"
serde = "1.0.228"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
